--- a/src/content/podcasts/Brudzynski/podcast_Brudzynski_1/index.mdx
+++ b/src/content/podcasts/Brudzynski/podcast_Brudzynski_1/index.mdx
@@ -7,3 +7,4 @@ description: '„Pochodził z rodziny ziemiańskiej z bogatymi tradycjami” –
 page: "podcast_Brudzynski_1"
 unpublished: false
 ---
+#Filip
