pages created programtically work

--- a/src/content/podcasts/Jelenski/podcast_Jelenski_1/index.mdx
+++ b/src/content/podcasts/Jelenski/podcast_Jelenski_1/index.mdx
@@ -38,3 +38,11 @@ zapisane w ruchach, w spojrzeniu, rytmie mowy, przechyleniu głowy” –
 pisze o jednym ze zdjęć Jeleńskiego Anna Arno, ostatnio autorka niedawno
 wydanej książki „Kot. Opowieść o Konstantym A. Jeleńskim”. Posłuchajmy
 pierwszego odcinka opowieści.
+
+<iframe
+src="https://widget.spreaker.com/player?episode_id=33893438&theme=light&playlist=false&playlist-continuous=false&autoplay=false&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true"
+width="100%"
+height="200px"
+frameborder="0"
+title="Podcast__Tworcy_Emigracji_Jelenski_1"
+></iframe>
