--- a/src/content/podcasts/Brudzynski/podcast_Brudzynski_3/index.mdx
+++ b/src/content/podcasts/Brudzynski/podcast_Brudzynski_3/index.mdx
@@ -8,3 +8,23 @@ page: "podcast_Brudzynski_3"
 unpublished: false
 unpublished_episode: "Trzeci"
 ---
+
+„Wszystko zostało odwrócone. Ta wystawa powinna być tylko etapem, a nie
+zakończeniem pracy. Tadeusz zanurzył się w życie z takim impetem.
+Artystom jest trudniej, niż ludziom zwyczajnym; czują i widzą znacznie
+więcej, lepiej. Stan, w którym muszą się znaleźć aby pracować, jest inny
+od normalnego. Ale trzeba codziennie wracać do życia. […] Jego malarstwo
+całkowicie przylega do Niego. Jest duże jak On, ma siłę, delikatność,
+decyzję. Jest otwarte i wolne. Bardzo różnorodne. Ma blask i ciepło
+uczucia” – pisał prof. Jacek Sienicki w tekście do katalogu wystawy w
+Zachęcie, która została otwarta w 1997 roku już jako podsumowanie tej
+niespełnionej twórczości, po śmierci artysty. W ostatnim odcinku była
+żona Małgorzata Brudzyńska mówi o osobistym odbiorze twórczości jej
+męża, jego inspiracjach, zróżnicowanej tematyce prac, a także sukcesach.
+
+<iframe
+src="https://widget.spreaker.com/player?episode_id=39767057&theme=light&playlist=false&playlist-continuous=false&autoplay=false&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true"
+width="100%"
+height="200px"
+frameborder="0"
+></iframe>
