--- a/src/content/podcasts/Jelenski/podcast_Jelenski_2/index.mdx
+++ b/src/content/podcasts/Jelenski/podcast_Jelenski_2/index.mdx
@@ -7,4 +7,22 @@ description: '„Jeleński zaangażował się na rzecz promocji dzieła Gombrowi
 page: "podcast_Jelenski_2"
 unpublished: false
 ---
+„Jak przekazać tej przyszłej cywilizacji to, co jest najlepszego w
+naszej? Dla katolika odpowiedź na to pytanie jest jasna. Dla liberała –
+niestety nie. Czasem myślę żartobliwie, że przepisanie Eneidy na
+antyatomowej butelce ważniejsze byłoby od tysiąca książek i artykułów” –
+napisał 28-letni Konstanty Jeleński do Józefa Czapskiego.
 
+Sprawy przyszłości środowiska, Polski, świata, cywilizacji wielokrotnie
+były tematem obszernej korespondencji nie tylko tych dwóch zasłużonych
+twórców. Chodziło także o przyszłość i kształt polskiej kultury.
+Konstanty Jeleński stał się zapalonym ambasadorem twórczości
+Gombrowicza. Szczegóły w drugim odcinku. Mówi Anna Arno.
+
+<iframe
+src="https://widget.spreaker.com/player?episode_id=33893651&theme=light&playlist=false&playlist-continuous=false&autoplay=false&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true"
+width="100%"
+height="200px"
+frameborder="0"
+title="Podcast__Tworcy_Emigracji_Jelenski_1"
+></iframe>
