--- a/src/content/podcasts/Jelenski/podcast_Jelenski_1/index.mdx
+++ b/src/content/podcasts/Jelenski/podcast_Jelenski_1/index.mdx
@@ -8,12 +8,18 @@ page: "podcast_Jelenski_1"
 unpublished: false
 ---
 
+
 To, co robiłem i myślałem, nie miało właściwie nigdy głębokiego,
 realnego związku. Byłem może (w przypadkowym porządku): liberałem,
 synem, humanistą, czytelnikiem, sumiennym urzędnikiem, Polakiem,
 przyjacielem, kochankiem, pederastą itd. „Kot Jeleński” – postać nieco
 proteuszowska, zależnie od tego, przez kogo odzwierciedlana.
 
+To, co robiłem i myślałem, nie miało właściwie nigdy głębokiego,
+realnego związku. Byłem może (w przypadkowym porządku): liberałem,
+synem, humanistą, czytelnikiem, sumiennym urzędnikiem, Polakiem,
+przyjacielem, kochankiem, pederastą itd. „Kot Jeleński” – postać nieco
+proteuszowska, zależnie od tego, przez kogo odzwierciedlana.
 "Konstanty A. Jeleński. Listy z Korsyki" Fundacja Zeszytów Literackich, Warszawa 2003.
 
 Pisał z Rzymu w sierpniu 1952 roku do Józefa Czapskiego, Konstanty
@@ -46,3 +52,4 @@ height="200px"
 frameborder="0"
 title="Podcast__Tworcy_Emigracji_Jelenski_1"
 ></iframe>
+
