--- a/src/content/podcasts/Brudzynski/podcast_Brudzynski_2/index.mdx
+++ b/src/content/podcasts/Brudzynski/podcast_Brudzynski_2/index.mdx
@@ -23,9 +23,14 @@ jaskrawych barw, rozdzierających doskonałą czerń, jak krzyk w pustce*”.
 O tym jak wyglądało życie Tadeusza Brudzyńskiego w Paryżu, opowiada
 była żona Małgorzata Brudzyńska.
 
+Cytaty i informacje pochodzą z książki wydanej staraniem rodziny
+malarza, m. in. ojca – Andrzeja Brudzyńskiego (więcej na jego temat <a href="https://www.1944.pl/archiwum-historii-mowionej/andrzej-brudzynski,3357.html"> tutaj</a>).
+
 <iframe
 src="https://widget.spreaker.com/player?episode_id=39525682&theme=light&playlist=false&playlist-continuous=false&autoplay=false&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true"
 width="100%"
 height="200px"
 frameborder="0"
 ></iframe>
+
+Zdjęcie artysty z archiwum rodzinnego.
