--- a/src/content/podcasts/Brudzynski/podcast_Brudzynski_3/index.mdx
+++ b/src/content/podcasts/Brudzynski/podcast_Brudzynski_3/index.mdx
@@ -22,9 +22,14 @@ niespełnionej twórczości, po śmierci artysty. W ostatnim odcinku była
 żona Małgorzata Brudzyńska mówi o osobistym odbiorze twórczości jej
 męża, jego inspiracjach, zróżnicowanej tematyce prac, a także sukcesach.
 
+Cytaty i informacje pochodzą z książki wydanej staraniem rodziny
+malarza, m. in. ojca – Andrzeja Brudzyńskiego (więcej na jego temat <a href="https://www.1944.pl/archiwum-historii-mowionej/andrzej-brudzynski,3357.html"> tutaj</a>).
+
 <iframe
 src="https://widget.spreaker.com/player?episode_id=39767057&theme=light&playlist=false&playlist-continuous=false&autoplay=false&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true"
 width="100%"
 height="200px"
 frameborder="0"
-></iframe>
+></iframe> 
+
+Zdjęcie artysty z archiwum rodzinnego.
