--- a/src/content/podcasts/Jelenski/podcast_Jelenski_2/index.mdx
+++ b/src/content/podcasts/Jelenski/podcast_Jelenski_2/index.mdx
@@ -28,4 +28,8 @@ frameborder="0"
 title="Podcast__Tworcy_Emigracji_Jelenski_1"
 ></iframe>
 
+Fot. Krzysztof Jung, źródło: <a
+href="http://www.wojciechkarpinski.com"
+target="_blank"
+rel="noreferrer"> www.wojciechkarpinski.com </a>
 
