--- a/src/content/podcasts/Jelenski/podcast_Jelenski_3/index.mdx
+++ b/src/content/podcasts/Jelenski/podcast_Jelenski_3/index.mdx
@@ -34,3 +34,8 @@ width="100%"
 height="200px"
 frameborder="0"
 ></iframe>
+
+Fot. Krzysztof Jung, źródło: <a
+href="http://www.wojciechkarpinski.com"
+target="_blank"
+rel="noreferrer"> www.wojciechkarpinski.com </a>
