--- a/src/content/podcasts/Jelenski/podcast_Jelenski_1/index.mdx
+++ b/src/content/podcasts/Jelenski/podcast_Jelenski_1/index.mdx
@@ -20,6 +20,7 @@ realnego związku. Byłem może (w przypadkowym porządku): liberałem,
 synem, humanistą, czytelnikiem, sumiennym urzędnikiem, Polakiem,
 przyjacielem, kochankiem, pederastą itd. „Kot Jeleński” – postać nieco
 proteuszowska, zależnie od tego, przez kogo odzwierciedlana.
+
 "Konstanty A. Jeleński. Listy z Korsyki" Fundacja Zeszytów Literackich, Warszawa 2003.
 
 Pisał z Rzymu w sierpniu 1952 roku do Józefa Czapskiego, Konstanty
@@ -52,4 +53,9 @@ height="200px"
 frameborder="0"
 title="Podcast__Tworcy_Emigracji_Jelenski_1"
 ></iframe>
+
+Fot. Krzysztof Jung, źródło: <a
+href="http://www.wojciechkarpinski.com"
+target="_blank"
+rel="noreferrer"> www.wojciechkarpinski.com </a>
 
