--- a/src/content/podcasts/Jelenski/podcast_Jelenski_3/index.mdx
+++ b/src/content/podcasts/Jelenski/podcast_Jelenski_3/index.mdx
@@ -3,7 +3,7 @@ title: "Konstanty Jeleński"
 episode: 3
 author: "Jelenski"
 date: "05.07.2020"
-description: '„Jeleński ich wszystkich podziwiał, przy nim czuli się wielcy, ważni, docenieni, wysłuchani..." – mówi Anna Arno"'
+description: '„Jeleński ich wszystkich podziwiał, przy nim czuli się wielcy, ważni, docenieni, wysłuchani..." – mówi Anna Arno.'
 page: "podcast_Jelenski_3"
 unpublished: false
 ---
