episode 3 herling added

--- a/src/content/podcasts/Herling-Grudzinski/podcast_Herling_2/index.mdx
+++ b/src/content/podcasts/Herling-Grudzinski/podcast_Herling_2/index.mdx
@@ -3,7 +3,7 @@ title: "Gustaw Herling-Grudziński"
 episode: 2
 author: "Herling"
 date: "23.07.2020"
-description: '„Nieżyczliwi im ludzie podkreślali - oni tam w Londynie głodowali" – mówi znawca twórczości Gustawa Herlinga-Grudzińskiego, prof. Zdzisław Kudelski.'
+description: '„Nieżyczliwi im ludzie podkreślali - oni tam w Londynie głodowali" – mówi znawca twórczości Gustawa Herlinga-Grudzińskiego, prof. KUL - Zdzisław Kudelski.'
 page: "podcast_Herling_2"
 unpublished: false
 unpublished_episode: "Drugi"
