jocz second episode added

--- a/src/content/podcasts/Jocz/podcast_Jocz_2/index.mdx
+++ b/src/content/podcasts/Jocz/podcast_Jocz_2/index.mdx
@@ -5,17 +5,12 @@ author: "Jocz"
 date: "30.07.2020"
 description: '„Patrząc na popiersie muzyka nie miało się wątpliwości, że mamy do czynienia z muzykiem, choć nie było tam, ani skrzypiec, ani fortepianu” – mówi przyjaciel, dziennikarz Ludwik Lewin.'
 page: "podcast_Jocz_2"
-unpublished: true
+unpublished: false
 unpublished_episode: "Drugi"
 ---
 
 Paweł Jocz mieszkał na przedmieściach Paryża, w Boulogne Billancourt. Artysta wygrał konkurs na dwie rzeźby w tamtejszej przestrzeni miejskiej, czyli prace zatytułowane „Elewacja” i „Chmura poety”. Jego dzieła znajdują się w muzeach, galeriach, prywatnych kolekcjach. Jest autorem monumentalnym rzeźb, np.  „Solidarność ludów” w Wielsbeke w Belgii. Prace Pawła Jocza znajdują się w siedzibie Polskiej Akademii Nauk w Paryżu i Bibliotece Polskiej. Po śmierci redaktora Jerzego Giedroycia wykonał jego maskę pośmiertną, którą można obejrzeć w domu „Kultury”. O tym czym charakteryzowała się sztuka Jocza, opowiada Ludwik Lewin.
 
-<iframe
-src="https://widget.spreaker.com/player?episode_id=36862794&theme=light&playlist=false&playlist-continuous=false&autoplay=false&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true"
-width="100%"
-height="200px"
-frameborder="0"
-></iframe>
+<iframe src="https://widget.spreaker.com/player?episode_id=40005897&theme=light&playlist=false&playlist-continuous=false&autoplay=true&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true" width="100%" height="200px" frameborder="0"></iframe>
 
 Zdjęcie pozowane, zrobione na życzenie artysty, autor Michael Wittbrot, Paryż 2003 rok.
