--- a/src/content/podcasts/Jocz/podcast_Jocz_3/index.mdx
+++ b/src/content/podcasts/Jocz/podcast_Jocz_3/index.mdx
@@ -5,17 +5,12 @@ author: "Jocz"
 date: "01.08.2020"
 description: '„Kiedy nie mógł już rzeźbić, robił rysunki patykiem i tuszem” – wspomina przyjaciel, dziennikarz Ludwik Lewin.'
 page: "podcast_Jocz_3"
-unpublished: true
+unpublished: false
 unpublished_episode: "Trzeci"
 ---
 
 Paweł Jocz zmarł w 2008 roku. Mieszkał we Francji prawie 40 lat. Nie zapomnieli o nim przyjaciele – Teresa Tomsia pisała w swoim wierszu po śmierci artysty: „Wytrwałeś mocą człowieczej gliny do kresu – twórczy Orfeusz rękę prowadzi Twoją galerią luster – prosto w aleję Głazów Niezłomnych”. Pierwszą dużą „polską” wystawą była ta zorganizowana w 1993 roku w Galerii Arsenał w Poznaniu. Zaprezentowano na niej  30 rysunków i 20 rzeźb. Mariusz Rosiak pisał: „Z punktu widzenia rzeźbiarskiego zadanie, jakie stawia sobie Jocz, jest - wydawałoby się - stosunkowo proste: przelać w surową i ciężką materię całą swoją czułość, radość i gniew. Zakląć raz na zawsze najskrytsze swoje przeczucia i obsesje. Znaleźć dla nich kształt, nadać im formę, wzburzyć powierzchnie, by - mówiąc słowami Józefa Czapskiego, który zawsze był bliski Joczowi i którego wielokrotnie odwiedzał w Maison-Laffitte rzeźbiarsko wyrazić ból i grozę życia”. O ostatnich latach opowiada przyjaciel Pawła Jocza, Ludwik Lewin.
 
-<iframe
-src="https://widget.spreaker.com/player?episode_id=36862794&theme=light&playlist=false&playlist-continuous=false&autoplay=false&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true"
-width="100%"
-height="200px"
-frameborder="0"
-></iframe>
+<iframe src="https://widget.spreaker.com/player?episode_id=40005898&theme=light&playlist=false&playlist-continuous=false&autoplay=true&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true" width="100%" height="200px" frameborder="0"></iframe>
 
 Zdjęcie pozowane, zrobione na życzenie artysty, autor Michael Wittbrot, Paryż 2003 rok.
