--- a/src/content/podcasts/Niemiec/podcast_Niemiec_1/index.mdx
+++ b/src/content/podcasts/Niemiec/podcast_Niemiec_1/index.mdx
@@ -13,3 +13,5 @@ Urodził się 7 października 1953 roku w Warszawie. Dwa lata później jego rod
 
 <iframe src="https://widget.spreaker.com/player?episode_id=40215701&theme=light&playlist=false&playlist-continuous=false&autoplay=false&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true" width="100%" height="200px" frameborder="0"></iframe>
 
+Aut. zdj. M. Bykowska
+
