--- a/src/content/podcasts/Niemiec/podcast_Niemiec_2/index.mdx
+++ b/src/content/podcasts/Niemiec/podcast_Niemiec_2/index.mdx
@@ -12,3 +12,5 @@ unpublished_episode: "Drugi"
 Maciej Niemiec nawiązał współpracę z opozycją demokratyczną w 1983 roku, wówczas to udostępnia swoje mieszkanie dla nielegalnej drukarnii i współpracuje jako kolporter i drukarz z OKOR – Ogólnopolskim Komitetem Obrony Rolników. Podejmuje współpracę także z „Biuletynem Dolnośląskim”. Publikuje w „Wezwaniu” i „Res publice”. Zakłada niezależne pismo „Kontur”, pierwszy numer ukazuje się, kiedy jest już we Francji. W 1987 roku otrzymuje bowiem stypendium Fundacji na Rzecz Samopomocy Intelektualistów Europejskich. Do Paryża przyjeżdża w listopadzie, zostanie tam 25 lat, do swojej tragicznej śmierci w 2012 roku. O wspólnym życiu w Paryżu opowiada była żona Renata Głowacka.
 
 <iframe src="https://widget.spreaker.com/player?episode_id=40215703&theme=light&playlist=false&playlist-continuous=false&autoplay=false&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true" width="100%" height="200px" frameborder="0"></iframe>
+
+Aut. zdj. M. Bykowska
