--- a/src/content/podcasts/Niemiec/podcast_Niemiec_3/index.mdx
+++ b/src/content/podcasts/Niemiec/podcast_Niemiec_3/index.mdx
@@ -12,3 +12,5 @@ unpublished_episode: "Trzeci"
 Maciej Niemiec publikował w „Kulturze”, „Zeszytach Literackich” i „Kontakcie”. W latach 1989-1992 pracował w Księgarni Polskiej w Paryżu. W 1989 roku ukazały się dwa tomy jego wierzy – „Cokolwiek ponieważ” oraz „O tej porze świata”. W latach 1992-1993 współpracował z Radio France International oraz Radiem Free Europe. Był laureatem Nagrody Karla Dedeciusa, Nagrody im. Zygmunta i Marii Zaleskich oraz Nagrody Kościelskich. Jak pisał Michel Deguy – „Maciej Niemiec był poetą silnego wzburzenia, czyli nieprzynależnym do żadnego stanu: wiódł życie emigranta - żarliwe, biedne, natchnione, często bolesne [...]. Był ‘poetą wyklętym’ w dawnym sensie słowa”. Jednym z bardziej znanych jego tomów pozostaje „Stan nasycenia”. Swojego byłego męża wspomina Renata Głowacka.
 
 <iframe src="https://widget.spreaker.com/player?episode_id=40215704&theme=light&playlist=false&playlist-continuous=false&autoplay=false&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true" width="100%" height="200px" frameborder="0"></iframe>
+
+Aut. zdj. M. Bykowska
