niemiec third added

--- a/src/content/podcasts/Niemiec/podcast_Niemiec_3/index.mdx
+++ b/src/content/podcasts/Niemiec/podcast_Niemiec_3/index.mdx
@@ -5,7 +5,7 @@ author: "Niemiec"
 date: "15.08.2020"
 description: '„„Zawsze miał eleganckie, świetnie wypastowane buty, chodził w kapeluszu, płaszczu, nie było to pretensjonalne, był elegancki także wewnątrz” – mówi była żona Renata Głowacka.'
 page: "podcast_Niemiec_3"
-unpublished: true
+unpublished: false
 unpublished_episode: "Trzeci"
 ---
 
@@ -13,4 +13,4 @@ Maciej Niemiec publikował w „Kulturze”, „Zeszytach Literackich” i „Ko
 
 <iframe src="https://widget.spreaker.com/player?episode_id=40215704&theme=light&playlist=false&playlist-continuous=false&autoplay=false&live-autoplay=false&chapters-image=true&episode_image_position=right&hide-logo=false&hide-likes=false&hide-comments=false&hide-sharing=false&hide-download=true" width="100%" height="200px" frameborder="0"></iframe>
 
-Aut. zdj. M. Bykowska
+Aut. zdj. M. Bykowska.
