episode 2 niemiec corrected

--- a/src/content/podcasts/Niemiec/podcast_Niemiec_2/index.mdx
+++ b/src/content/podcasts/Niemiec/podcast_Niemiec_2/index.mdx
@@ -3,7 +3,7 @@ title: "Maciej Niemiec"
 episode: 2
 author: "Niemiec"
 date: "13.08.2020"
-description: '„Dzieci wspominają, że jedną z najważniejszych książek ich życia to były Opowieści z Narnii i Maciej czytał im tę książkę …” – mówi była żona Renata Głowacka.'
+description: '„Dzieci wspominają, że jedną z najważniejszych książek ich życia były „Opowieści z Narnii” i Maciej czytał im tę książkę …” – mówi była żona Renata Głowacka.'
 page: "podcast_Niemiec_2"
 unpublished: false
 unpublished_episode: "Drugi"
