--- a/src/content/podcasts/Niemiec/podcast_Niemiec_3/index.mdx
+++ b/src/content/podcasts/Niemiec/podcast_Niemiec_3/index.mdx
@@ -3,7 +3,7 @@ title: "Maciej Niemiec"
 episode: 3
 author: "Niemiec"
 date: "15.08.2020"
-description: '„„Zawsze miał eleganckie, świetnie wypastowane buty, chodził w kapeluszu, płaszczu, nie było to pretensjonalne, był elegancki także wewnątrz” – mówi była żona Renata Głowacka.'
+description: '„Zawsze miał eleganckie, świetnie wypastowane buty, chodził w kapeluszu, płaszczu, nie było to pretensjonalne, był elegancki także wewnątrz” – mówi była żona Renata Głowacka.'
 page: "podcast_Niemiec_3"
 unpublished: false
 unpublished_episode: "Trzeci"
